--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -41,6 +41,11 @@
         "xlocinfo": "cpp",
         "xlocnum": "cpp",
         "xstddef": "cpp",
-        "xtr1common": "cpp"
+        "xtr1common": "cpp",
+        "optional": "cpp",
+        "set": "cpp",
+        "string": "cpp",
+        "vector": "cpp",
+        "xtree": "cpp"
     }
 }
