Switch to runtime shader compiling

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -44,6 +44,11 @@
         "xtr1common": "cpp",
         "vector": "cpp",
         "optional": "cpp",
-        "array": "cpp"
+        "array": "cpp",
+        "algorithm": "cpp",
+        "fstream": "cpp",
+        "set": "cpp",
+        "string": "cpp",
+        "xtree": "cpp"
     }
 }
