--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,10 +1,10 @@
-cmake_minimum_required(VERSION 3.21)
+cmake_minimum_required(VERSION 3.24)
 
 project(GRAPHICS_ENGINE)
 
 set(CMAKE_CXX_STANDARD 23)
 
-find_package(Vulkan REQUIRED)
+find_package(Vulkan REQUIRED COMPONENTS shaderc_combined)
 
 include_directories("dependencies/glfw-3.3.9.bin.WIN64/include/GLFW")
 include_directories(${Vulkan_INCLUDE_DIR})
@@ -13,5 +13,8 @@ file(GLOB_RECURSE SourceFiles CONFIGURE_DEPENDS "src/Engine/*.h" "src/Engine/*.c
 
 add_executable(MAIN "src/main.cpp" ${HeaderFiles} ${SourceFiles})
 
+target_compile_options(MAIN PRIVATE "/MD$<$<CONFIG:Debug>:d>")
+
 target_link_libraries(MAIN "${CMAKE_SOURCE_DIR}/dependencies/glfw-3.3.9.bin.WIN64/lib-vc2022/glfw3_mt.lib")
 target_link_libraries(MAIN Vulkan::Vulkan)
+target_link_libraries(MAIN Vulkan::shaderc_combined)
