--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,14 +6,29 @@ set(CMAKE_CXX_STANDARD 23)
 
 find_package(Vulkan REQUIRED COMPONENTS shaderc_combined)
 
-include_directories("dependencies/glfw-3.3.9.bin.WIN64/include/GLFW")
+include_directories("dependencies/glfw-3.3.9.bin.WIN64/include")
 include_directories("dependencies/VMA")
 include_directories(${Vulkan_INCLUDE_DIR})
 
+include_directories("src/external/imgui")
+include_directories("src/Engine")
+
+file(GLOB ImGUIFiles "src/external/imgui/*.h" "src/external/imgui/*.cpp")
+
 file(GLOB_RECURSE SourceFiles
     "src/Engine/*.h"    
-    "src/Engine/*.cpp"    
+    "src/Engine/*.cpp"
+    "src/external/imgui/backends/imgui_impl_vulkan.cpp"
+    "src/external/imgui/backends/imgui_impl_glfw.cpp"
+    "src/external/imgui/imgui_draw.cpp"
+    "src/external/imgui/imgui_tables.cpp"
+    "src/external/imgui/imgui_widgets.cpp"
+    "src/external/imgui/imgui.cpp"
+    "src/external/imgui/imgui_demo.cpp" # TODO: Remove. Only for dummy implementation of ImGUIManager.
 )
+
+
+aux_source_directory(src/external EXTERNAL)
 
 add_executable(MAIN "src/main.cpp" ${SourceFiles}) 
 
