--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -77,7 +77,9 @@
         "cinttypes": "cpp",
         "condition_variable": "cpp",
         "shared_mutex": "cpp",
-        "*.rh": "cpp"
+        "*.rh": "cpp",
+        "stack": "cpp",
+        "deque": "cpp"
     },
     "cmake.configureSettings": {
         "CMAKE_BUILD_TYPE": "${buildType}"
