Do some quick ToDos

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,94 +1,95 @@
 {
-    "files.associations": {
-        "*.sc": "latex",
-        "xutility": "cpp",
-        "initializer_list": "cpp",
-        "iosfwd": "cpp",
-        "iterator": "cpp",
-        "xstring": "cpp",
-        "xmemory": "cpp",
-        "xlocale": "cpp",
-        "atomic": "cpp",
-        "bit": "cpp",
-        "cctype": "cpp",
-        "clocale": "cpp",
-        "cmath": "cpp",
-        "compare": "cpp",
-        "concepts": "cpp",
-        "cstddef": "cpp",
-        "cstdint": "cpp",
-        "cstdio": "cpp",
-        "cstdlib": "cpp",
-        "cstring": "cpp",
-        "ctime": "cpp",
-        "cwchar": "cpp",
-        "exception": "cpp",
-        "ios": "cpp",
-        "iostream": "cpp",
-        "istream": "cpp",
-        "limits": "cpp",
-        "memory": "cpp",
-        "new": "cpp",
-        "ostream": "cpp",
-        "stdexcept": "cpp",
-        "streambuf": "cpp",
-        "system_error": "cpp",
-        "tuple": "cpp",
-        "type_traits": "cpp",
-        "typeinfo": "cpp",
-        "utility": "cpp",
-        "xfacet": "cpp",
-        "xiosbase": "cpp",
-        "xlocinfo": "cpp",
-        "xlocnum": "cpp",
-        "xstddef": "cpp",
-        "xtr1common": "cpp",
-        "vector": "cpp",
-        "optional": "cpp",
-        "algorithm": "cpp",
-        "array": "cpp",
-        "charconv": "cpp",
-        "chrono": "cpp",
-        "cstdarg": "cpp",
-        "format": "cpp",
-        "forward_list": "cpp",
-        "fstream": "cpp",
-        "functional": "cpp",
-        "iomanip": "cpp",
-        "list": "cpp",
-        "locale": "cpp",
-        "map": "cpp",
-        "mutex": "cpp",
-        "ratio": "cpp",
-        "set": "cpp",
-        "sstream": "cpp",
-        "stop_token": "cpp",
-        "string": "cpp",
-        "thread": "cpp",
-        "unordered_map": "cpp",
-        "unordered_set": "cpp",
-        "xhash": "cpp",
-        "xlocbuf": "cpp",
-        "xlocmes": "cpp",
-        "xlocmon": "cpp",
-        "xloctime": "cpp",
-        "xtree": "cpp",
-        "span": "cpp",
-        "cinttypes": "cpp",
-        "condition_variable": "cpp",
-        "shared_mutex": "cpp",
-        "*.rh": "cpp",
-        "stack": "cpp",
-        "deque": "cpp",
-        "ranges": "cpp"
-    },
-    "cmake.configureSettings": {
-        "CMAKE_BUILD_TYPE": "${buildType}"
-    },
-    "[c]": {
-        "editor.wordBasedSuggestions": "off",
-        "editor.suggest.insertMode": "replace",
-        "editor.semanticHighlighting.enabled": true,
-        "editor.defaultFormatter": "ms-vscode.cpptools"
-    }
+  "files.associations": {
+    "*.sc": "latex",
+    "xutility": "cpp",
+    "initializer_list": "cpp",
+    "iosfwd": "cpp",
+    "iterator": "cpp",
+    "xstring": "cpp",
+    "xmemory": "cpp",
+    "xlocale": "cpp",
+    "atomic": "cpp",
+    "bit": "cpp",
+    "cctype": "cpp",
+    "clocale": "cpp",
+    "cmath": "cpp",
+    "compare": "cpp",
+    "concepts": "cpp",
+    "cstddef": "cpp",
+    "cstdint": "cpp",
+    "cstdio": "cpp",
+    "cstdlib": "cpp",
+    "cstring": "cpp",
+    "ctime": "cpp",
+    "cwchar": "cpp",
+    "exception": "cpp",
+    "ios": "cpp",
+    "iostream": "cpp",
+    "istream": "cpp",
+    "limits": "cpp",
+    "memory": "cpp",
+    "new": "cpp",
+    "ostream": "cpp",
+    "stdexcept": "cpp",
+    "streambuf": "cpp",
+    "system_error": "cpp",
+    "tuple": "cpp",
+    "type_traits": "cpp",
+    "typeinfo": "cpp",
+    "utility": "cpp",
+    "xfacet": "cpp",
+    "xiosbase": "cpp",
+    "xlocinfo": "cpp",
+    "xlocnum": "cpp",
+    "xstddef": "cpp",
+    "xtr1common": "cpp",
+    "vector": "cpp",
+    "optional": "cpp",
+    "algorithm": "cpp",
+    "array": "cpp",
+    "charconv": "cpp",
+    "chrono": "cpp",
+    "cstdarg": "cpp",
+    "format": "cpp",
+    "forward_list": "cpp",
+    "fstream": "cpp",
+    "functional": "cpp",
+    "iomanip": "cpp",
+    "list": "cpp",
+    "locale": "cpp",
+    "map": "cpp",
+    "mutex": "cpp",
+    "ratio": "cpp",
+    "set": "cpp",
+    "sstream": "cpp",
+    "stop_token": "cpp",
+    "string": "cpp",
+    "thread": "cpp",
+    "unordered_map": "cpp",
+    "unordered_set": "cpp",
+    "xhash": "cpp",
+    "xlocbuf": "cpp",
+    "xlocmes": "cpp",
+    "xlocmon": "cpp",
+    "xloctime": "cpp",
+    "xtree": "cpp",
+    "span": "cpp",
+    "cinttypes": "cpp",
+    "condition_variable": "cpp",
+    "shared_mutex": "cpp",
+    "*.rh": "cpp",
+    "stack": "cpp",
+    "deque": "cpp",
+    "ranges": "cpp"
+  },
+  "cmake.configureSettings": {
+    "CMAKE_BUILD_TYPE": "${buildType}"
+  },
+  "[c]": {
+    "editor.wordBasedSuggestions": "off",
+    "editor.suggest.insertMode": "replace",
+    "editor.semanticHighlighting.enabled": true,
+    "editor.defaultFormatter": "ms-vscode.cpptools"
+  },
+  "C_Cpp.errorSquiggles": "disabled"
 }
