Add vulkan-1.pdb to hopefully debug (still have to figure out how)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -57,6 +57,7 @@ macro(make_app NAME ENTRY_POINT)
     # To keep assets in the same place as the binaries
     if(CMAKE_BUILD_TYPE MATCHES Debug)
         add_custom_command(TARGET ${NAME} POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy_directory ${CMAKE_SOURCE_DIR}/res ${CMAKE_BINARY_DIR}/Debug/res)
+        add_custom_command(TARGET ${NAME} POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy_directory ${CMAKE_SOURCE_DIR}/debug-symbols ${CMAKE_BINARY_DIR}/Debug)
     else()
         add_custom_command(TARGET ${NAME} POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy_directory ${CMAKE_SOURCE_DIR}/res ${CMAKE_BINARY_DIR}/Release/res)
     endif()
