--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -97,5 +97,6 @@
         "editor.semanticHighlighting.enabled": true,
         "editor.defaultFormatter": "ms-vscode.cpptools"
     },
-    "editor.formatOnSave": true
+    "editor.formatOnSave": true,
+    "json.format.keepLines": true
 }
