Fix warnings, remove assets only used by editor

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,24 +4,25 @@ project(GRAPHICS_ENGINE)
 
 option(BUILD_WITH_PROFILING "Build for profiling" ON)
 option(BUILD_DEMO_APPS "Build demo apps" ON)
+option(DELIVER_RESOURCES "Copy resources to binary directory" ON)
 
 set(CMAKE_CXX_STANDARD 23)
 
 # set(CMAKE_VERBOSE_MAKEFILE ON)
 
 # Allow for file name macro set relative to source folder
-string(LENGTH "${CMAKE_SOURCE_DIR}/src/" SOURCE_PATH_SIZE)
+string(LENGTH "${PROJECT_SOURCE_DIR}/src/" SOURCE_PATH_SIZE)
 add_compile_definitions(SOURCE_PATH_SIZE=${SOURCE_PATH_SIZE})
 
-message("User components source path: ${USER_COMPONENTS_SOURCE_PATH}")
+message("-- User components source path: ${USER_COMPONENTS_SOURCE_PATH}")
 
 if(DEFINED USER_COMPONENTS_SOURCE_PATH)
-    message("USER_COMPONENTS_SOURCE_PATH defined, adding definition")
+    message("-- USER_COMPONENTS_SOURCE_PATH defined, adding definition")
     add_compile_definitions(USER_COMPONENTS_SOURCE=${USER_COMPONENTS_SOURCE_PATH})
 endif()
 
 if(DEFINED USER_SCRIPTS_SOURCE_PATH)
-    message("USER_SCRIPTS_SOURCE_PATH defined, adding definition")
+    message("-- USER_SCRIPTS_SOURCE_PATH defined, adding definition")
     add_compile_definitions(USER_SCRIPTS_SOURCE=${USER_SCRIPTS_SOURCE_PATH})
 else()
     add_compile_definitions(USER_SCRIPTS_SOURCE="Scripts.h")
@@ -58,26 +59,38 @@ aux_source_directory(src/external EXTERNAL)
 add_compile_options(/Zc:preprocessor)
 add_library(Engine STATIC ${EngineFiles})
 
+if(DELIVER_RESOURCES)
+    message("-- Delivering engine resources to binary directory")
+    if(CMAKE_BUILD_TYPE MATCHES Debug)
+        add_custom_command(TARGET Engine POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy_directory ${PROJECT_SOURCE_DIR}/res ${CMAKE_BINARY_DIR}/Debug/res)
+        add_custom_command(TARGET Engine POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy_directory ${PROJECT_SOURCE_DIR}/debug-symbols ${CMAKE_BINARY_DIR}/Debug)
+    else()
+        add_custom_command(TARGET Engine POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy_directory ${PROJECT_SOURCE_DIR}/res ${CMAKE_BINARY_DIR}/Release/res)
+    endif()
+endif()
+
 macro(make_app NAME ENTRY_POINT)
-    message("Building demo app ${NAME}")
+    message("-- Building demo app ${NAME}")
     add_executable(${NAME} "src/${ENTRY_POINT}.cpp")
 
     target_link_libraries(${NAME} Engine)
 
-    target_link_libraries(${NAME} "${CMAKE_SOURCE_DIR}/dependencies/glfw-3.3.9.bin.WIN64/lib-vc2022/glfw3_mt.lib")
+    target_link_libraries(${NAME} "${PROJECT_SOURCE_DIR}/dependencies/glfw-3.3.9.bin.WIN64/lib-vc2022/glfw3_mt.lib")
     target_link_libraries(${NAME} Vulkan::Vulkan)
     target_link_libraries(${NAME} Vulkan::shaderc_combined)
 
     # To store profiles
     file(MAKE_DIRECTORY ${CMAKE_BINARY_DIR}/Release/profiles ${CMAKE_BINARY_DIR}/Debug/profiles)
 
+    message("-- Build type for GameEngine: ${CMAKE_BUILD_TYPE}")
+
     # To keep assets in the same place as the binaries
     if(CMAKE_BUILD_TYPE MATCHES Debug)
-        add_custom_command(TARGET ${NAME} POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy_directory ${CMAKE_SOURCE_DIR}/res ${CMAKE_BINARY_DIR}/Debug/res)
-        add_custom_command(TARGET ${NAME} POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy_directory ${CMAKE_SOURCE_DIR}/debug-symbols ${CMAKE_BINARY_DIR}/Debug)
+        add_custom_command(TARGET ${NAME} POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy_directory ${PROJECT_SOURCE_DIR}/res ${CMAKE_BINARY_DIR}/Debug/res)
+        add_custom_command(TARGET ${NAME} POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy_directory ${PROJECT_SOURCE_DIR}/debug-symbols ${CMAKE_BINARY_DIR}/Debug)
     else()
-        add_custom_command(TARGET ${NAME} POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy_directory ${CMAKE_SOURCE_DIR}/res ${CMAKE_BINARY_DIR}/Release/res)
-        add_custom_command(TARGET ${NAME} POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_SOURCE_DIR}/res//VkLayer_khronos_validation.pdb ${CMAKE_BINARY_DIR}/Release)
+        add_custom_command(TARGET ${NAME} POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy_directory ${PROJECT_SOURCE_DIR}/res ${CMAKE_BINARY_DIR}/Release/res)
+        add_custom_command(TARGET ${NAME} POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy ${PROJECT_SOURCE_DIR}/res//VkLayer_khronos_validation.pdb ${CMAKE_BINARY_DIR}/Release)
     endif()
 endmacro()
 
