Add public dependency tracking for easier use as subproject

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,7 +25,9 @@ if(DEFINED USER_SCRIPTS_SOURCE_PATH)
     message("-- USER_SCRIPTS_SOURCE_PATH defined, adding definition")
     add_compile_definitions(USER_SCRIPTS_SOURCE=${USER_SCRIPTS_SOURCE_PATH})
 else()
-    add_compile_definitions(USER_SCRIPTS_SOURCE="Scripts.h")
+    if(BUILD_DEMO_APPS)
+        add_compile_definitions(USER_SCRIPTS_SOURCE="${PROJECT_SOURCE_DIR}/src/Demo/Scripts.h")
+    endif()
 endif()
 
 if(BUILD_WITH_PROFILING)
@@ -36,16 +38,6 @@ else()
 endif()
 
 find_package(Vulkan REQUIRED COMPONENTS shaderc_combined)
-
-include_directories("dependencies/glfw-3.3.9.bin.WIN64/include")
-include_directories("dependencies/VMA")
-include_directories("dependencies/GLM/")
-include_directories(${Vulkan_INCLUDE_DIR})
-
-include_directories("src/external/json-parsing")
-include_directories("src/external/stb")
-include_directories("src/Engine")
-include_directories("src/Demo")
 
 file(GLOB_RECURSE EngineFiles
     if(DEFINED USER_COMPONENTS_SOURCE_PATH) USER_COMPONENTS_SOURCE_PATH endif()
@@ -59,8 +51,23 @@ aux_source_directory(src/external EXTERNAL)
 add_compile_options(/Zc:preprocessor)
 add_library(Engine STATIC ${EngineFiles})
 
+target_include_directories(Engine PUBLIC "dependencies/glfw-3.3.9.bin.WIN64/include")
+target_include_directories(Engine PUBLIC "dependencies/VMA")
+target_include_directories(Engine PUBLIC "dependencies/GLM/")
+target_include_directories(Engine PUBLIC ${Vulkan_INCLUDE_DIR})
+
+target_include_directories(Engine PUBLIC "src/external/json-parsing")
+target_include_directories(Engine PUBLIC "src/external/stb")
+target_include_directories(Engine PUBLIC "src/Engine")
+
+target_link_libraries(Engine PUBLIC "${PROJECT_SOURCE_DIR}/dependencies/glfw-3.3.9.bin.WIN64/lib-vc2022/glfw3_mt.lib")
+target_link_libraries(Engine PUBLIC Vulkan::Vulkan)
+target_link_libraries(Engine PUBLIC Vulkan::shaderc_combined)
+
+# To keep assets in the same place as the binaries
 if(DELIVER_RESOURCES)
     message("-- Delivering engine resources to binary directory")
+
     if(CMAKE_BUILD_TYPE MATCHES Debug)
         add_custom_command(TARGET Engine POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy_directory ${PROJECT_SOURCE_DIR}/res ${CMAKE_BINARY_DIR}/Debug/res)
         add_custom_command(TARGET Engine POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy_directory ${PROJECT_SOURCE_DIR}/debug-symbols ${CMAKE_BINARY_DIR}/Debug)
@@ -73,25 +80,13 @@ macro(make_app NAME ENTRY_POINT)
     message("-- Building demo app ${NAME}")
     add_executable(${NAME} "src/${ENTRY_POINT}.cpp")
 
+    target_include_directories(${NAME} PRIVATE "src/Demo")
     target_link_libraries(${NAME} Engine)
-
-    target_link_libraries(${NAME} "${PROJECT_SOURCE_DIR}/dependencies/glfw-3.3.9.bin.WIN64/lib-vc2022/glfw3_mt.lib")
-    target_link_libraries(${NAME} Vulkan::Vulkan)
-    target_link_libraries(${NAME} Vulkan::shaderc_combined)
 
     # To store profiles
     file(MAKE_DIRECTORY ${CMAKE_BINARY_DIR}/Release/profiles ${CMAKE_BINARY_DIR}/Debug/profiles)
 
     message("-- Build type for GameEngine: ${CMAKE_BUILD_TYPE}")
-
-    # To keep assets in the same place as the binaries
-    if(CMAKE_BUILD_TYPE MATCHES Debug)
-        add_custom_command(TARGET ${NAME} POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy_directory ${PROJECT_SOURCE_DIR}/res ${CMAKE_BINARY_DIR}/Debug/res)
-        add_custom_command(TARGET ${NAME} POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy_directory ${PROJECT_SOURCE_DIR}/debug-symbols ${CMAKE_BINARY_DIR}/Debug)
-    else()
-        add_custom_command(TARGET ${NAME} POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy_directory ${PROJECT_SOURCE_DIR}/res ${CMAKE_BINARY_DIR}/Release/res)
-        add_custom_command(TARGET ${NAME} POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy ${PROJECT_SOURCE_DIR}/res//VkLayer_khronos_validation.pdb ${CMAKE_BINARY_DIR}/Release)
-    endif()
 endmacro()
 
 if(${BUILD_DEMO_APPS})
